<resources>
    <string name="app_name">Paging3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="coin_rates">Coin Rates</string>
<!--    <string name="price">$ %1$.2f</string>-->
    <string name="price">$ %1$.2f</string>
    <string name="plus">+ %1$.2f %%</string>
    <string name="norm">%1$.2f %%</string>
    <string name="vol">Vol</string>
    <string name="usd">/USD</string>
    <string name="name_vol">Name/Vol</string>
    <string name="last_price">Last Price</string>
    <string name="_24h_diff">24h diff</string>


</resources>